# ai_workflow_local_rag_tutorial

./: AI_Local_Workflow_with_RAG.ipynb  README.md  SETUP.md  pyproject.toml
