[project]
name = "ai-workflow-local-rag-tutorial"
version = "0.1.0"
description = "A fully local AI workflow demonstrating RAG with a FastHTML tutor using Ollama and Postgres with pgvector"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.4.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
    "jupyter>=1.0.0",
]
